# Imagry_Task1

./: Add.cpp  Add.h  Add_I.cpp  Add_I.h  CMakeLists.txt  CPU.cpp  CPU.h  Exit.cpp  Exit.h  Jump.cpp  Jump.h  Print.cpp  Print.h  RAM.cpp  README.md  ROM.cpp  SetMemory.cpp  SetMemory.h  instruction.cpp  instruction.h  instructions.txt  main.cpp  memory.cpp  memory.h  test.cpp
CPU/: CPU.cpp  CPU.h
Instructions/: Add.cpp  Add.h  Add_I.cpp  Add_I.h  Exit.cpp  Exit.h  InstructionFactory.cpp  InstructionFactory.h  Jump.cpp  Jump.h  Print.h  SetMemory.cpp  SetMemory.h  instruction.cpp  instruction.h
Memory/: RAM.cpp  RAM.h  ROM.h  memory.cpp  memory.h
inputFiles/: instructions.txt
